--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -11,9 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet"  href="../src/font-fa/font.css">
     <title>React App</title>
   </head>
-  <body>
+  <body dir="rtl">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
